# xtd

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: run_tests.yml
include/: algorithm.h  math.h
include/algorithm/: extrema.h  reduce.h  sort.h
include/internal/: concepts.h  defines.h
include/math/: abs.h  acos.h  acosh.h  asin.h  asinh.h  atan.h  atan2.h  atanh.h  cbrt.h  ceil.h  cos.h  cosh.h  exp.h  exp2.h  expm1.h  floor.h  hypot.h  log.h  log10.h  log1p.h  log2.h  max.h  min.h  mod.h  pow.h  remainder.h  sin.h  sinh.h  sqrt.h  tan.h  tanh.h  trunc.h
include/xtd/: algorithm.h  xtd.h
include/xtd/algorithm/: extrema.h  reduce.h  sort.h
include/xtd/internal/: concepts.h  defines.h
include/xtd/math/: abs.h  acos.h  acosh.h  asin.h  asinh.h  atan.h  atan2.h  atanh.h  cbrt.h  ceil.h  cos.h  cosh.h  exp.h  exp2.h  expm1.h  floor.h  hypot.h  log.h  log10.h  log1p.h  log2.h  max.h  min.h  mod.h  pow.h  remainder.h  sin.h  sinh.h  sqrt.h  tan.h  tanh.h  trunc.h
test/: Makefile
test/common/: cpu_test.h  cuda_check.h  cuda_test.h  hip_check.h  hip_test.h  sycl_test.h
test/max_element/: max_element_t.cc  max_element_t.cu  max_element_t.hip.cc  max_element_t.sycl.cc
test/min_element/: min_element_t.cc  min_element_t.cu  min_element_t.hip.cc  min_element_t.sycl.cc
test/reduce/: reduce_t.cc  reduce_t.cu  reduce_t.hip.cc  reduce_t.sycl.cc
test/sin/: sin_t.cc  sin_t.cu  sin_t.hip.cc  sin_t.sycl.cc
test/sort/: sort_t.cc  sort_t.cu  sort_t.hip.cc  sort_t.sycl.cc
